--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "smb-angularvf",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
@@ -12,5 +12,5 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "appApp"
+  "moduleName": "smb"
 }
