--- a/bower.json
+++ b/bower.json
@@ -7,16 +7,11 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-ui-grid": "~3.0.6",
-    "underscore": "~1.8.3",
-    "angular-animate": "~1.4.7",
-    "angular-block-ui": "~0.2.0",
-    "angular-bootstrap": "~0.13.4",
-    "bootstrap": "3.3.4"
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "pointofsale"
+  "moduleName": "testapp"
 }
