--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jshint-stylish": "^1.0.0",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "engines": {
     "node": ">=0.10.0"
