Code development underway - forms now pulling back from mock JSON

--- a/environments/COMPUTERNAME-env.json.template
+++ b/environments/COMPUTERNAME-env.json.template
@@ -1,6 +1,6 @@
 {
 	"appName": "testapp",
-	"vfPageName": "PointOfSale",
+	"vfPageName": "vfpage",
 	"devName": "mike",
 	"credentials": {
 		"user":      "mike@smbhd.com.developer",
