--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,11 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "salesforce-lightning-design-system": "git://github.com/mbowen000/design-system-bower.git#addingmain"
+  },
+  "overrides": {
+
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
