--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,10 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "underscore": "~1.8.3",
-    "salesforce-lightning-design-system": "git://github.com/mbowen000/design-system-bower.git#addingmain"
+    "salesforce-lightning-design-system": "git://github.com/mbowen000/design-system-bower.git#addingmain",
+    "angular-safeapply": "~1.0.4"
   },
-  "overrides": {
-
-  },
+  "overrides": {},
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
