--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,8 @@
 {
-  "name": "smb-angularvf",
+  "name": "lightning-angular",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
     "underscore": "~1.8.3",
     "salesforce-lightning-design-system": "git://github.com/mbowen000/design-system-bower.git#addingmain",
     "angular-safeapply": "~1.0.4",
