--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
-    "grunt-karma": "*",
+    "grunt-karma": "^0.12.1",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-processhtml": "^0.3.8",
@@ -30,14 +30,17 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "grunt-zip": "^0.17.1",
+    "jasmine-core": "^2.4.1",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.0",
     "karma-coverage": "^0.5.2",
     "karma-jasmine": "*",
     "karma-ng-html2js-preprocessor": "^0.2.0",
-    "karma-phantomjs-launcher": "*",
+    "karma-phantomjs-launcher": "^0.2.1",
     "num2fraction": "^1.2.2",
+    "phantomjs": "^1.9.19",
     "postcss": "^5.0.12",
     "rimraf": "2.2.8",
     "time-grunt": "^1.0.0",
