--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,13 @@
     "moment": "~2.10.6",
     "angular-inform": "~0.0.18",
     "angular-block-ui": "~0.2.0",
-    "salesforce-lightning-design-system": "~0.12.1"
+    "salesforce-lightning-design-system": "~0.12.1",
+    "trix": "~0.9.4"
   },
   "overrides": {},
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+    "angular-mocks": "^1.3.0",
+    "trix": "~0.9.4"
   },
   "appPath": "app",
   "moduleName": "testapp"
