--- a/package.json
+++ b/package.json
@@ -47,9 +47,14 @@
     "underscore": "^1.8.3"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "5.1.0"
   },
   "scripts": {
-    "test": "grunt test"
-  }
+    "test": "grunt test",
+    "start": "grunt serve"
+  },
+  "dependencies": {
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13"
+  },
 }
