--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-angular-templates": "^0.5.7",
     "grunt-ant-sfdc": "^0.2.6",
     "grunt-autoprefixer": "^2.0.0",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -54,7 +55,5 @@
     "start": "grunt serve"
   },
   "dependencies": {
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13"
   }
 }
