--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,15 @@
   "version": "0.0.1",
   "main": "./dist/scripts/scripts.js",
   "dependencies": {
-    "angular": "^1.3.0",
-    "underscore": "~1.8.3",
-    "angular-safeapply": "~1.0.4",
-    "jquery": "~2.1.4",
-    "moment": "~2.10.6",
-    "angular-inform": "~0.0.18",
-    "angular-block-ui": "~0.2.0",
-    "salesforce-lightning-design-system": "~0.12.1",
-    "trix": "~0.9.4"
+    "angular": "1.3.6",
+    "underscore": "1.8.3",
+    "angular-safeapply": "1.0.4",
+    "jquery": "2.1.4",
+    "moment": "2.10.6",
+    "angular-inform": "0.0.18",
+    "angular-block-ui": "0.2.0",
+    "salesforce-lightning-design-system": "0.12.1",
+    "trix": "0.9.4"
   },
   "overrides": {},
   "devDependencies": {
