--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "./dist/scripts/scripts.js",
   "dependencies": {
-    "angular": "1.3.6",
+    "angular": "1.4.8",
     "underscore": "1.8.3",
     "angular-safeapply": "1.0.4",
     "jquery": "2.1.4",
@@ -19,5 +19,8 @@
     "trix": "~0.9.4"
   },
   "appPath": "app",
-  "moduleName": "testapp"
+  "moduleName": "testapp",
+  "resolutions": {
+    "angular": "1.4.8"
+  }
 }
