--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,11 @@
     "angular-inform": "0.0.18",
     "angular-block-ui": "0.2.0",
     "salesforce-lightning-design-system": "2.0.2",
-    "trix": "0.9.4"
+    "trix": "0.9.7"
   },
   "overrides": {},
   "devDependencies": {
-    "angular-mocks": "^1.3.0",
-    "trix": "~0.9.4"
+    "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
   "moduleName": "testapp",
